Update .gitignore with new folder names

--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,13 @@
 *~
 .~lock*
 00_archive/*
-02_*/*
-03_*/*
-04_*/*
-05_*/*
-06_*/*
-07_*/*
-08_*/*
-99_databases/*
-multiple_hits*
-species_to_remove.txt
+03_databases/*
+04_data/*
+05_trimmed/*
+06_merged/*
+07_split_amplicons/*
+08_chimeras/*
+09_usearch_multiple_hits/*
+10_results_multiple_hits/*
+11_usearch/*
+12_results/*
